--- a/ProyectoFablab/ProyectoFablab.vbproj
+++ b/ProyectoFablab/ProyectoFablab.vbproj
@@ -83,6 +83,12 @@
     <Compile Include="Base de Datos\GatewayTipoUsuario.vb" />
     <Compile Include="Base de Datos\GatewayUsuario.vb" />
     <Compile Include="Base de Datos\Modulos.vb" />
+    <Compile Include="Interfaz\NuevoUsuario.Designer.vb">
+      <DependentUpon>NuevoUsuario.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Interfaz\NuevoUsuario.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Interfaz\VentanaBienvenida.Designer.vb">
       <DependentUpon>VentanaBienvenida.vb</DependentUpon>
     </Compile>
@@ -110,8 +116,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Negocio\Negocio.vb" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Interfaz\NuevoUsuario.resx">
+      <DependentUpon>NuevoUsuario.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Interfaz\VentanaBienvenida.resx">
       <DependentUpon>VentanaBienvenida.vb</DependentUpon>
     </EmbeddedResource>
@@ -154,6 +164,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="industrial-robot.ico" />
+    <None Include="Resources\add.png" />
     <None Include="Resources\gestion.png" />
     <None Include="Resources\add_user.png" />
     <None Include="Resources\StarBlueEyes.png" />
