--- a/ProyectoFablab/ProyectoFablab.vbproj
+++ b/ProyectoFablab/ProyectoFablab.vbproj
@@ -83,6 +83,18 @@
     <Compile Include="Base de Datos\GatewayTipoUsuario.vb" />
     <Compile Include="Base de Datos\GatewayUsuario.vb" />
     <Compile Include="Base de Datos\Modulos.vb" />
+    <Compile Include="Interfaz\GestionMaquinas.Designer.vb">
+      <DependentUpon>GestionMaquinas.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Interfaz\GestionMaquinas.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Interfaz\MaquinasEvento.Designer.vb">
+      <DependentUpon>MaquinasEvento.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Interfaz\MaquinasEvento.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Interfaz\VentanaBienvenida.Designer.vb">
       <DependentUpon>VentanaBienvenida.vb</DependentUpon>
     </Compile>
@@ -112,6 +124,12 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Interfaz\GestionMaquinas.resx">
+      <DependentUpon>GestionMaquinas.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Interfaz\MaquinasEvento.resx">
+      <DependentUpon>MaquinasEvento.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Interfaz\VentanaBienvenida.resx">
       <DependentUpon>VentanaBienvenida.vb</DependentUpon>
     </EmbeddedResource>
@@ -126,6 +144,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
