--- a/ProyectoFablab/ProyectoFablab.vbproj
+++ b/ProyectoFablab/ProyectoFablab.vbproj
@@ -83,6 +83,18 @@
     <Compile Include="Base de Datos\GatewayTipoUsuario.vb" />
     <Compile Include="Base de Datos\GatewayUsuario.vb" />
     <Compile Include="Base de Datos\Modulos.vb" />
+    <Compile Include="Interfaz\GestionMaquinas.designer.vb">
+      <DependentUpon>GestionMaquinas.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Interfaz\GestionMaquinas.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Interfaz\MaquinasEvento.Designer.vb">
+      <DependentUpon>MaquinasEvento.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Interfaz\MaquinasEvento.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Interfaz\NuevoUsuario.Designer.vb">
       <DependentUpon>NuevoUsuario.vb</DependentUpon>
     </Compile>
@@ -119,6 +131,12 @@
     <Compile Include="Negocio\Negocio.vb" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Interfaz\GestionMaquinas.resx">
+      <DependentUpon>GestionMaquinas.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Interfaz\MaquinasEvento.resx">
+      <DependentUpon>MaquinasEvento.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Interfaz\NuevoUsuario.resx">
       <DependentUpon>NuevoUsuario.vb</DependentUpon>
     </EmbeddedResource>
