--- a/ProyectoFablab/ProyectoFablab.vbproj
+++ b/ProyectoFablab/ProyectoFablab.vbproj
@@ -82,7 +82,13 @@
     <Compile Include="Base de Datos\GatewayReservas.vb" />
     <Compile Include="Base de Datos\GatewayTipoUsuario.vb" />
     <Compile Include="Base de Datos\GatewayUsuario.vb" />
-    <Compile Include="Base de Datos\Modulos.vb" />
+    <Compile Include="Modulos.vb" />
+    <Compile Include="Interfaz\Nuevo.designer.vb">
+      <DependentUpon>Nuevo.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Interfaz\Nuevo.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Interfaz\NuevoUsuario.Designer.vb">
       <DependentUpon>NuevoUsuario.vb</DependentUpon>
     </Compile>
@@ -119,6 +125,9 @@
     <Compile Include="Negocio\Negocio.vb" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Interfaz\Nuevo.resx">
+      <DependentUpon>Nuevo.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Interfaz\NuevoUsuario.resx">
       <DependentUpon>NuevoUsuario.vb</DependentUpon>
     </EmbeddedResource>
