--- a/ProyectoFablab/ProyectoFablab.vbproj
+++ b/ProyectoFablab/ProyectoFablab.vbproj
@@ -82,7 +82,6 @@
     <Compile Include="Base de Datos\GatewayReservas.vb" />
     <Compile Include="Base de Datos\GatewayTipoUsuario.vb" />
     <Compile Include="Base de Datos\GatewayUsuario.vb" />
-    <Compile Include="Base de Datos\Modulos.vb" />
     <Compile Include="Interfaz\GestionMaquinas.designer.vb">
       <DependentUpon>GestionMaquinas.vb</DependentUpon>
     </Compile>
@@ -113,6 +112,7 @@
     <Compile Include="Interfaz\VentanaPrincipal.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Modulo.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
