Función de imágenes y modificacion boton Examinar

--- a/ProyectoFablab/App.config
+++ b/ProyectoFablab/App.config
@@ -1,11 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="ProyectoFablab.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="ProyectoFablab.My.MySettings.conexion" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=FabLab;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
+        <add name="ProyectoFablab.My.MySettings.Conexion" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=FabLab;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
     </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <userSettings>
+        <ProyectoFablab.My.MySettings>
+            <setting name="ThumApiKey" serializeAs="String">
+                <value>c50e8657acd5465889ed8a2bb450d8c0</value>
+            </setting>
+            <setting name="LinkConnect" serializeAs="String">
+                <value>https://westcentralus.api.cognitive.microsoft.com/vision/v1.0</value>
+            </setting>
+            <setting name="Ruta" serializeAs="String">
+                <value>..\..\Resources\</value>
+            </setting>
+        </ProyectoFablab.My.MySettings>
+    </userSettings>
 </configuration>
