--- a/ProyectoFablab/My Project/Settings.settings
+++ b/ProyectoFablab/My Project/Settings.settings
@@ -2,12 +2,21 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="My" GeneratedClassName="MySettings" UseMySettingsClassName="true">
   <Profiles />
   <Settings>
-    <Setting Name="conexion" Type="(Connection string)" Scope="Application">
+    <Setting Name="Conexion" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
   &lt;ConnectionString&gt;Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=FabLab;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False&lt;/ConnectionString&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=FabLab;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False</Value>
+    </Setting>
+    <Setting Name="ThumApiKey" Type="System.String" Scope="User">
+      <Value Profile="(Default)">c50e8657acd5465889ed8a2bb450d8c0</Value>
+    </Setting>
+    <Setting Name="LinkConnect" Type="System.String" Scope="User">
+      <Value Profile="(Default)">https://westcentralus.api.cognitive.microsoft.com/vision/v1.0</Value>
+    </Setting>
+    <Setting Name="Ruta" Type="System.String" Scope="User">
+      <Value Profile="(Default)">..\..\Resources\</Value>
     </Setting>
   </Settings>
 </SettingsFile>
