Boton imagen usuario

--- a/ProyectoFablab/App.config
+++ b/ProyectoFablab/App.config
@@ -19,8 +19,11 @@
             <setting name="LinkConnect" serializeAs="String">
                 <value>https://westcentralus.api.cognitive.microsoft.com/vision/v1.0</value>
             </setting>
-            <setting name="Ruta" serializeAs="String">
-                <value>..\..\Resources\</value>
+            <setting name="usuariosImg" serializeAs="String">
+                <value>..\..\Imagenes\Usuarios\</value>
+            </setting>
+            <setting name="maquinasImg" serializeAs="String">
+                <value>..\..\Imagenes\Maquinas\</value>
             </setting>
         </ProyectoFablab.My.MySettings>
     </userSettings>
