--- a/ProyectoFablab/My Project/Settings.settings
+++ b/ProyectoFablab/My Project/Settings.settings
@@ -15,8 +15,11 @@
     <Setting Name="LinkConnect" Type="System.String" Scope="User">
       <Value Profile="(Default)">https://westcentralus.api.cognitive.microsoft.com/vision/v1.0</Value>
     </Setting>
-    <Setting Name="Ruta" Type="System.String" Scope="User">
-      <Value Profile="(Default)">..\..\Resources\</Value>
+    <Setting Name="usuariosImg" Type="System.String" Scope="User">
+      <Value Profile="(Default)">..\..\Imagenes\Usuarios\</Value>
+    </Setting>
+    <Setting Name="maquinasImg" Type="System.String" Scope="User">
+      <Value Profile="(Default)">..\..\Imagenes\Maquinas\</Value>
     </Setting>
   </Settings>
 </SettingsFile>
