--- a/ProyectoFablab/App.config
+++ b/ProyectoFablab/App.config
@@ -6,7 +6,7 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="ProyectoFablab.My.MySettings.Conexion" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=FabLab;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
+        <add name="ProyectoFablab.My.MySettings.Conexion" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=FabBalmis;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
     </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
