Gestion de usuarios consultar

--- a/ProyectoFablab/App.config
+++ b/ProyectoFablab/App.config
@@ -19,10 +19,10 @@
             <setting name="LinkConnect" serializeAs="String">
                 <value>https://westcentralus.api.cognitive.microsoft.com/vision/v1.0</value>
             </setting>
-            <setting name="usuariosImg" serializeAs="String">
+            <setting name="UsuariosImg" serializeAs="String">
                 <value>..\..\Imagenes\Usuarios\</value>
             </setting>
-            <setting name="maquinasImg" serializeAs="String">
+            <setting name="MaquinasImg" serializeAs="String">
                 <value>..\..\Imagenes\Maquinas\</value>
             </setting>
         </ProyectoFablab.My.MySettings>
