--- a/ProyectoFablab/ProyectoFablab.vbproj
+++ b/ProyectoFablab/ProyectoFablab.vbproj
@@ -116,6 +116,12 @@
     <Compile Include="Interfaz\NuevaMaquina.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Interfaz\NuevoTipoMaquina.Designer.vb">
+      <DependentUpon>NuevoTipoMaquina.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Interfaz\NuevoTipoMaquina.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Interfaz\NuevoTipoUsuario.Designer.vb">
       <DependentUpon>NuevoTipoUsuario.vb</DependentUpon>
     </Compile>
@@ -174,6 +180,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Interfaz\NuevaMaquina.resx">
       <DependentUpon>NuevaMaquina.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Interfaz\NuevoTipoMaquina.resx">
+      <DependentUpon>NuevoTipoMaquina.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Interfaz\NuevoTipoUsuario.resx">
       <DependentUpon>NuevoTipoUsuario.vb</DependentUpon>
